<resources>
    <string name="app_name">SafetApp</string>
    <string name="crime_map">Crime Map</string>
    <string name="report_crime">Report Crime</string>
    <string name="fir_token">FIR Token</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login_id">Login Id</string>
    <string name="current_reporting">Current</string>
    <string name="later_reporting">Chosen</string>
    <string name="crime_report_location">Crime Location</string>
    <string name="submit">Submit</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="required">Required</string>
    <string name="place">Place</string>
    <string name="city">City</string>
    <string name="time">Time</string>
<!--    <string name="crime_type">Crime Type</string>-->
    <string name="reporter_type">Reporter Type</string>
    <string name="security_availability">Security Availability</string>
    <string name="proofs">Proof</string>
    <string name="crime_1">Theft</string>
    <string name="crime_2">Eve Teasing</string>
    <string name="crime_3">Miscellaneous</string>
    <string name="description">Description</string>
    <string name="add_comments">Add comments</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="victim">Victim</string>
    <string name="spectator">Spectator</string>
    <string name="none">None</string>
    <string name="minimal">Minimal</string>
    <string name="normal">Normal</string>
    <string name="excessive">Excessive</string>
    <string name="title_activity_geo_fire">Map</string>
    <string name="title_activity_report__crime">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_location">My Location</string>
    <string name="user_name">User Name</string>
    <string name="start">Start</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="pswrd">Password</string>
    <string name="aadhar_no">Aadhar Number</string>
    <string name="confirm_pswrd">Confirm Password</string>
    <string name="or">OR</string>
    <string name="text_sign_up">Don\'t have an account?</string>
    <string name="signUp">SignUp</string>
    <string name="local">Local</string>
    <string name="text_tourist">Tourist</string>
    <string name="police_station">Police station</string>
    <string name="police_st_address">Police Station Address</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="phone_no">Phone Number</string>
    <string name="date">Date</string>
    <string name="eve_teasing">Eve Teasing</string>
    <string name="molestation">Molestation</string>
    <string name="dowry">Dowry</string>
    <string name="rape">Rape</string>
    <string name="crime_type">Crime Type</string>
<!--    <string name="crime_type">Crime Type</string>-->

</resources>
