<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_crime_map"
            android:icon="@drawable/loc"
            android:title="@string/crime_map" />
        <item
            android:id="@+id/nav_report_crime"
            android:icon="@drawable/report"
            android:title="@string/report_crime" />
        <item
            android:id="@+id/nav_fir_token"
            android:icon="@drawable/token"
            android:title="@string/fir_token" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />


    </group>

</menu>
