<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="normal"
                android:id="@+id/date"
                android:textColor="@color/grey_dark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/time"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textColor="@color/grey_dark"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/grey_dark"
                android:layout_below="@+id/date"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/email"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:layout_below="@+id/name"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:id="@+id/mob"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police_station"
                android:id="@+id/police_station"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/grey_dark"
                android:layout_below="@+id/mob"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police_st_address"
                android:id="@+id/police_station_address"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:layout_below="@+id/police_station"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crime_type"
                android:id="@+id/crime_type"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/grey_dark"
                android:layout_below="@+id/police_station_address"
                android:layout_marginTop="20dp"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>