<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/path5"
    tools:context=".Sign_up">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_femme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aadhar_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/logo"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/aadhar_no"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxBackgroundColor="@color/design_default_color_on_primary"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="#DD1818"
        app:helperText="@string/required">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aadhar_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_below="@+id/aadhar_layout"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_centerInParent="true"
        android:hint="@string/pswrd"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxBackgroundColor="@color/design_default_color_on_primary"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="#DD1818"
        app:helperText="@string/required"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        android:layout_below="@+id/password_layout"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_centerInParent="true"
        android:hint="@string/confirm_pswrd"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="#DD1818"
        app:helperText="@string/required"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        android:layout_below="@+id/confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:drawableEnd="@drawable/next"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:backgroundTint="@color/colorPrimary_w"/>

    <LinearLayout
        android:id="@+id/linear_layout_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sign_up_btn"
        >

        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:text="@string/or"
            android:fontFamily="@font/rambla"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linear_layout_or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:id="@+id/signUp_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_up"
            android:textColor="@color/grey"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:fontFamily="@font/rambla"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/signIn_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="@font/rambla"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"

            />
    </LinearLayout>
    </RelativeLayout>
</ScrollView>