<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:name="com.google.android.gms.maps.SupportMapFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report_Crime">
<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/location_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/loc"
        android:text="@string/my_location"
        android:textColor="@color/blue"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/outline"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/rambla"
                android:text="@string/crime_report_location"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                >

                <RadioButton
                    android:id="@+id/current_crime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_reporting"
                    android:textColor="@color/colorAccent"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:fontFamily="@font/rambla"
                    android:textAllCaps="false"
                    />

                <RadioButton
                    android:id="@+id/later_crime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/later_reporting"
                    android:textColor="@color/colorAccent"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:fontFamily="@font/rambla"
                    android:textAllCaps="false"
                    />

            </RadioGroup>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/curved"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:fontFamily="@font/rambla"
                android:textSize="20sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</fragment>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/imgLocationPinUp"
        android:src="@drawable/ic_pin"/>
</RelativeLayout>