<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_crime_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_crime_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rambla"
            android:text="@string/reporter_type"
            android:textAllCaps="false"
            android:textColor="@color/grey_dark"
            android:textSize="23sp"
            android:textStyle="bold" />

        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
            android:id="@+id/group_choices_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tbgCheckedButton="@+id/victim">

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/victim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/victim"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/spectator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spectator"/>

        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/security_availability"
            android:textAllCaps="false"
            android:textColor="@color/grey_dark"
            android:fontFamily="@font/rambla"
            android:textSize="23sp"
            android:textStyle="bold" />

        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
            android:id="@+id/group_choices_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tbgCheckedButton="@+id/victim">

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/victim"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/minimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spectator"/>
            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/victim"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/excessive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spectator"/>

        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>