<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Later_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeErrorColor="#DD1818"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/add_comments"
            android:layout_marginBottom="20dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeErrorColor="#DD1818"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <com.spark.submitbutton.SubmitButton
        android:id="@+id/submit_btn"
        android:layout_width="430dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold"
        app:sub_btn_background="@color/colorPrimary"
        app:sub_btn_duration="3000"
        app:sub_btn_line_color="@color/colorPrimary"
        app:sub_btn_ripple_color="@color/colorPrimary"
        app:sub_btn_tick_color="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>